# local-transcribe

./: .gitignore  README.md  SETUP.md  backends.py  build.sh  download_models.py  exports.py  generate_icon.py  gui.py  launch.sh  local_transcribe.spec  logging_setup.py  pyproject.toml  settings.example.toml  transcribe.py  verbatim.spec
assets/: Verbatim.icns
tests/: conftest.py  test_backend_interface.py  test_exports.py  test_feedback.py  test_http_range_server.py  test_integration.py  test_settings.py  test_speaker_assignment.py
web/: index.html
