[project]
name = "verbatim"
version = "0.3.0"
description = "Verbatim — private on-device audio transcription + diarisation via parakeet-mlx"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "parakeet-mlx>=0.5",
    "pyannote-audio>=3.3",
    "pywebview>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "mutmut>=3.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: slow integration tests that need model weights",
]

[tool.mutmut]
paths_to_mutate = ["transcribe.py", "exports.py", "backends.py"]
tests_dir = ["tests"]
also_copy = ["gui.py", "logging_setup.py"]
